cabal-version:      2.4
name:               wlsunset-sni
version:            0.1.0.0
synopsis:           StatusNotifierItem tray icon for controlling wlsunset
category:           System
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ivan A. Malison
maintainer:         Ivan A. Malison
build-type:         Simple
tested-with:        GHC ==9.10.3

description:
  Standalone StatusNotifierItem (SNI) / AppIndicator tray icon for controlling
  the wlsunset Wayland day/night gamma adjustor.

extra-source-files:
  README.md

extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/taffybar/wlsunset-sni

common common
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    , base >=4.14 && <4.21

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    DBus.Proxy
    Wlsunset.Process
    Wlsunset.Menu
    Wlsunset.SNI
  build-depends:
    , bytestring >=0.12.2.0 && <0.13
    , dbus >=1.4.1 && <1.5
    , gi-dbusmenu >=0.4.14 && <0.5
    , gi-gio >=2.0.38 && <2.1
    , gi-glib >=2.0.30 && <2.1
    , haskell-gi-base >=0.26.9 && <0.27
    , hslogger >=1.3.2.0 && <1.4
    , process >=1.6.26.1 && <1.7
    , stm >=2.5.3.1 && <2.6
    , text >=2.1.3 && <2.2
    , transformers >=0.6.1.1 && <0.7
    , unix >=2.8.7.0 && <2.9
    , status-notifier-item >=0.3.2.7 && <0.4

executable wlsunset-sni
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , hslogger >=1.3.2.0 && <1.4
    , optparse-applicative >=0.18.1.0 && <0.19
    , wlsunset-sni
